# hid-remapper

./: PICODEV.md
firmware/: CMakeLists.txt
firmware/src/: ascci_converter.h  ascii_converter.cc  ascii_converter.h  main.cc  remapper.cc  remapper.h  remapper_single.cc  serial.cc  serial.h
